tweaked image styling to prevent image overlap on carousel

--- a/react-app/src/components/gameStorePage/GameStorePage.css
+++ b/react-app/src/components/gameStorePage/GameStorePage.css
@@ -16,6 +16,7 @@
     width: 50%;
     height: 100%;
     position: relative;
+    max-width: 800px;
 }
 
 
@@ -25,13 +26,16 @@
 }
 
 .game-image {
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
+    width: 800px;
+    height: 450px;
     object-fit: cover;
     object-position: center;
     display: block;
     cursor: grab;
 }
+
 
 .game-image:active {
     cursor: grabbing;
@@ -40,7 +44,4 @@
 .review-box p {
     max-width: 100%;
     word-wrap: break-word;
-}
-img {
-    height: 100%;
 }
